--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     },
     "dependencies": {
         "@react-pdf/renderer": "^3.1.12",
+        "@uiw/react-color-compact": "^1.3.1",
+        "@uiw/react-color-wheel": "^1.3.1",
         "pdf-lib": "^1.17.1",
         "pdfkit": "^0.13.0",
         "react": "^18.2.0",
