--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@react-pdf/renderer": "^3.1.12",
+        "@uidotdev/usehooks": "^2.0.1",
         "@uiw/react-color-compact": "^1.3.1",
         "@uiw/react-color-wheel": "^1.3.1",
         "pdf-lib": "^1.17.1",
