--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-modal": "^3.16.1",
-        "ts-node": "^10.9.1"
+        "ts-node": "^10.9.1",
+        "usehooks-ts": "^2.9.1"
     },
     "devDependencies": {
         "@types/node": "^20.3.2",
